mobile navbar overflow fix

--- a/style/scss/styles.scss
+++ b/style/scss/styles.scss
@@ -37,6 +37,7 @@
 body{
     font-family: 'Source Sans Pro', sans-serif;
     max-width: var(--max-width);
+    overflow-x: hidden;
     margin: auto;
 
     color: var(--black);
